corrected navbar spacing

--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ main {
 }
 
 .navbar a {
-  margin: 0 20px;
+  margin: 0px 5px;
   font-size: small;
 }
 
